--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   firebase_core: ^0.4.5
   provider: ^4.1.3+1
   uuid: ^2.2.0
+  image_picker: ^0.6.1+11
+  firebase_storage: ^3.1.6
+  path: ^1.6.4
+
 
 dev_dependencies:
   flutter_test:
